--- a/controle_estatistico_voos.ipynb
+++ b/controle_estatistico_voos.ipynb
@@ -850,7 +850,7 @@
         "id": "ITMXJlBUaSDu"
       },
       "source": [
-        "Em relação ao 7 dias da semana, evidencia-se as maiores taxas de voos atrasados na segunda-feira (14,8%), quinta-feira (15,7%) e sexta-feira (16,6%). Vale destacar que, assim como nos meses de férias, estes são os dias com maior movimentação aérea e, caso o número de aeronaves não seja adequado, reforçam a ideia de que a sobreutilização das aeronaves gera desconforto no final da cadeia: o consumidor."
+        "Em relação ao 7 dias da semana, evidencia-se as maiores taxas de voos atrasados na segunda-feira (14.8%), quinta-feira (15.7%) e sexta-feira (16.6%). Vale destacar que, assim como nos meses de férias, estes são os dias com maior movimentação aérea e, caso o número de aeronaves não seja adequado, reforçam a ideia de que a sobreutilização das aeronaves gera desconforto no final da cadeia: o consumidor."
       ]
     },
     {
@@ -1157,7 +1157,7 @@
         "id": "a_3neHusabsm"
       },
       "source": [
-        "Os voos não são uniformes em relação às companhias aéreas. É de se esperar que companhia tradicionais operem com maior frequência do que companhias menores ou low cost. Olhando o gráfico abaixo destaca-se a companhia AZUL - eleita melhor companhia aérea do mundo por consumidores [[3]](https://revistaazul.voeazul.com.br/universo-azul/azul-e-eleita-a-melhor-companhia-aerea-do-mundo-pelo-tripadvisor/#:~:text=A%20Azul%20Linhas%20A%C3%A9reas%20Brasileiras,bandeira%20nacional%20conquista%20essa%20posi%C3%A7%C3%A3o) - com um número altíssimo de voos adiantados e junto com a GOL são as duas operadores mais influentes na malha aérea nacional. Atrás da AZUL e GOL temos outras duas companhias bem conhecidas no cenário de aviação: TAM e AVIANCA. Essa análise é essencial para definirmos quais companhias aéreas farão parte do nosso trabalho. Demais companhias, além das 4 mencionadas, foram consideradas irrelevantes, primeiramente por não serem conhecidas pelo público, mas sobretudo por terem previsto apenas 70.000 percursos, realizando menos de 68.000 deles (mais de 50% atrás da quarta companhia selecionada)."
+        "Os voos não são uniformes em relação às companhias aéreas. É de se esperar que companhia tradicionais operem com maior frequência do que companhias menores ou low cost. Olhando o gráfico abaixo destaca-se a companhia AZUL - eleita melhor companhia aérea do mundo por consumidores [[3]](https://revistaazul.voeazul.com.br/universo-azul/azul-e-eleita-a-melhor-companhia-aerea-do-mundo-pelo-tripadvisor/#:~:text=A%20Azul%20Linhas%20A%C3%A9reas%20Brasileiras,bandeira%20nacional%20conquista%20essa%20posi%C3%A7%C3%A3o) - com um número altíssimo de voos adiantados e junto com a GOL são as duas operadores mais influentes na malha aérea nacional. Atrás da AZUL e GOL temos outras duas companhias bem conhecidas no cenário de aviação: TAM e AVIANCA. Essa análise é essencial para definirmos quais companhias aéreas farão parte do nosso trabalho. Demais companhias, além das 4 mencionadas, foram consideradas irrelevantes, primeiramente por não serem conhecidas pelo público, mas sobretudo por terem previsto apenas 70000 percursos, realizando menos de 68000 deles (mais de 50% atrás da quarta companhia selecionada)."
       ]
     },
     {
@@ -1373,7 +1373,7 @@
         "id": "RQYf_k50bdPy"
       },
       "source": [
-        "A quantidade de aeroportos no Brasil é proporcional ao seu tamanho. Sendo um país continental, constam na base de dados 123 localidades de origem/partida espalhados pelas cinco regiões. Organizando por quantidade de voos planejados conseguimos ver na figura acima os 10 aeroportos mais movimentados do país e o ranking por taxa de voos atrasados. Dessa forma, foram escolhidos três aeroportos com taxa de atraso similar para que, por meio de análise de variância de 2 vias, fosse identificado quais fatores se mostram mais relevantes para uma operação de qualidade e como eles interagem. Os aeroportos Presidente Juscelino Kubitschek (muitas vezes mencionado como aeroporto de Brasília), de Congonhas e Santos Dumont (também mencionado como aeroporto carioca ou derivações), sofreram com 14.88%, 14.90% e 15.15% de atrasos durante o período estudado e foram os três aeroporto mais similares e escolhidos para fazerem parte do nosso trabalho."
+        "A quantidade de aeroportos no Brasil é proporcional ao seu tamanho. Sendo um país continental, constam na base de dados 123 localidades de origem/partida espalhados pelas cinco regiões. Organizando por quantidade de voos planejados conseguimos ver os 10 aeroportos mais movimentados do país e o ranking por taxa de voos atrasados. Dessa forma, foram escolhidos três aeroportos com taxa de atraso similar para que, por meio de análise de variância de 2 vias, fosse identificado quais fatores se mostram mais relevantes para uma operação de qualidade e como eles interagem. Os aeroportos Presidente Juscelino Kubitschek (muitas vezes mencionado como aeroporto de Brasília), de Congonhas e Santos Dumont (também mencionado como aeroporto carioca ou derivações), sofreram com 14.88%, 14.90% e 15.15% de atrasos durante o período estudado e foram os três aeroporto mais similares e escolhidos para fazerem parte do nosso trabalho."
       ]
     },
     {
@@ -1785,7 +1785,7 @@
       },
       "source": [
         "##2.2. TRATAMENTO DOS DADOS\n",
-        "Parte primordial para evitar que a análise seja enviesada é a identificação de outliers, isto é, valores que fogem da normalidade e que podem (e provavelmente irão) causar anomalias nos resultados obtidos. Foi definido como critério para limpeza dos dados os mesmos critérios do boxplot: valores superiores em 1,5 vezes a distância interquartil mais o terceiro quartil serão descartados da amostra."
+        "Parte primordial para evitar que a análise seja enviesada é a identificação de outliers, isto é, valores que fogem da normalidade e que podem (e provavelmente irão) causar anomalias nos resultados obtidos. Foi definido como critério para limpeza dos dados os mesmos critérios do boxplot: valores superiores em 1.5 vezes a distância interquartil mais o terceiro quartil serão descartados da amostra."
       ]
     },
     {
@@ -2016,7 +2016,7 @@
         "id": "OFhTPT10cmCl"
       },
       "source": [
-        "Com isso, reduziu-se em torno de 10% das observações em cada aeroporto e as amostras ficaram comprimidas em atrasos de 1 a 75 minutos. Destacadas as distribuições na figura abaixo, é possível constatar que os aeroportos de Brasília e Congonhas têm uma concentração de atrasos em 18 minutos enquanto o aeroporto carioca apresenta duas médias, em 4 e 18 minutos, respectivamente."
+        "Com isso, reduziu-se em torno de 10% das observações em cada aeroporto e as amostras ficaram comprimidas em atrasos de 1 a 75 minutos. Destacadas as distribuições de cada aeroporto, é possível constatar que os aeroportos de Brasília e Congonhas têm uma concentração de atrasos em 18 minutos enquanto o aeroporto carioca apresenta duas médias, em 4 e 18 minutos, respectivamente."
       ]
     },
     {
