--- a/controle_estatistico_voos.ipynb
+++ b/controle_estatistico_voos.ipynb
@@ -21,7 +21,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/vinismachadoo/aviacao_civil_brasil/blob/main/controle_estatistico_voos.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/vinismachadoo/aviacao-civil-brasil/blob/main/controle_estatistico_voos.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -70,7 +70,7 @@
         "id": "e_6V3wutCh6x"
       },
       "source": [
-        "!pip install kaggle --quiet"
+        "!pip install kaggle -q"
       ],
       "execution_count": null,
       "outputs": []
@@ -203,7 +203,7 @@
         "outputId": "3f9b7dfa-7904-4ed5-84ec-2cb6875921e8"
       },
       "source": [
-        "!pip install geopandas --quiet"
+        "!pip install geopandas -q"
       ],
       "execution_count": null,
       "outputs": [
@@ -263,7 +263,7 @@
         "id": "86lWhj_ztZ5s"
       },
       "source": [
-        "mapa_brasil = gpd.read_file('https://raw.githubusercontent.com/vinismachadoo/aviacao_civil_brasil/main/uf_brasil.geojson')"
+        "mapa_brasil = gpd.read_file('https://raw.githubusercontent.com/vinismachadoo/aviacao-civil-brasil/main/uf_brasil.geojson')"
       ],
       "execution_count": null,
       "outputs": []
